--- a/styles.css
+++ b/styles.css
@@ -210,6 +210,73 @@ nav li:nth-child(4) a {
     border-radius: 28px;
     opacity: .25;
 }
+/* GRAPHIC DESIGN AND PHOTOGRAPHY SECTIONS STYLING */
+.block-two {
+    display: flex;
+    flex-direction: column;
+}
+.block-two .graphic-design {
+    background-image: url('images/mobile/image-graphic-design.jpg');
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    position: relative;
+}
+.graphic-design .gd-content {
+    text-align: center;
+    position: absolute;
+    bottom: 59px;
+    /* padding: 0 24px 59px 24px; */
+}
+.graphic-design .gd-content h3{
+    font-family: 'Fraunces', serif;
+    font-weight: 900;
+    font-size: 28px;
+    color: #24554A;
+    margin-bottom: 33px;
+    line-height: 34px;
+}
+.graphic-design .gd-content p {
+    font-family: 'Barlow', sans-serif;
+    font-weight: 600;
+    font-size: 16px;
+    color: #24554A;
+    line-height: 27px;
+    margin-left: 24px;
+    margin-right: 24px;
+}
+/* PHOTOGRAPHY BLOCK STYLING */
+.block-two .photography {
+    background-image: url('images/mobile/image-photography.jpg');
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    position: relative;
+}
+.photography .photo-content {
+    text-align: center;
+    position: absolute;
+    bottom: 59px;
+    /* padding: 0 24px 59px 24px; */
+}
+.photography .photo-content h3{
+    font-family: 'Fraunces', serif;
+    font-weight: 900;
+    font-size: 28px;
+    color: #052C3B;
+    opacity: .75;
+    margin-bottom: 33px;
+    line-height: 34px;
+}
+.photography .photo-content p {
+    font-family: 'Barlow', sans-serif;
+    font-weight: 600;
+    font-size: 16px;
+    color: #19536C;
+    line-height: 27px;
+    margin-left: 24px;
+    margin-right: 24px;
+}
 @media screen and (min-width: 376px) {
     .hero {
         background-image: url('images/desktop/image-header.jpg');
