--- a/styles.css
+++ b/styles.css
@@ -221,15 +221,22 @@ nav li:nth-child(4) a {
 }
 .block-two .graphic-design {
     background-image: url('images/mobile/image-graphic-design.jpg');
-    background-repeat: no-repeat;
+    background-size: 100%;
     background-position: center center;
-    background-size: cover; 
-    position: relative;
+    background-repeat: no-repeat;
+    height: 600px;
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
 }
 .graphic-design .gd-content {
-    text-align: center;
-    position: absolute;
-    bottom: 59px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-left: 24px;
+    margin-right: 24px;
+    margin-bottom: 59px;
 }
 .graphic-design .gd-content h3{
     font-family: 'Fraunces', serif;
@@ -246,21 +253,27 @@ nav li:nth-child(4) a {
     font-size: 16px;
     color: #24554A;
     line-height: 27px;
-    margin-left: 24px;
-    margin-right: 24px;
+    text-align: center;
 }
 /* PHOTOGRAPHY BLOCK STYLING */
 .block-two .photography {
     background-image: url('images/mobile/image-photography.jpg');
+    background-size: 100%;
     background-repeat: no-repeat;
     background-position: center center;
-    background-size: cover;
-    position: relative;
+    height: 600px;
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
 }
 .photography .photo-content {
-    text-align: center;
-    position: absolute;
-    bottom: 59px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-left: 24px;
+    margin-right: 24px;
+    margin-bottom: 59px;
 }
 .photography .photo-content h3{
     font-family: 'Fraunces', serif;
@@ -277,8 +290,7 @@ nav li:nth-child(4) a {
     font-size: 16px;
     color: #19536C;
     line-height: 27px;
-    margin-left: 24px;
-    margin-right: 24px;
+    text-align: center;
 }
 /* CLIENT TESTIMONIALS BLOCK */
 .client-testimonials {
@@ -502,7 +514,6 @@ footer .social-icons {
     .stand-out-audience .learn-more-link.audience:hover::after {
         opacity: 1;
     }
-    /* DO THIS NEXT */
     .block-two {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
@@ -561,6 +572,3 @@ footer .social-icons {
         padding-bottom: 65px;
     }
 }
-/* @media screen and (min-width: 1100px) {
-
-} */
