--- a/styles.css
+++ b/styles.css
@@ -218,6 +218,8 @@ nav li:nth-child(4) a {
 .block-two {
     display: flex;
     flex-direction: column;
+    min-height: 0;
+    min-width: 0;
 }
 .block-two .graphic-design {
     background-image: url('images/mobile/image-graphic-design.jpg');
@@ -571,4 +573,15 @@ footer .social-icons {
         padding-top: 58px;
         padding-bottom: 65px;
     }
+}
+@media screen and (min-width: 1200px) {
+
+    .block-two .graphic-design {
+        background-image: url('images/desktop/image-graphic-design.jpg');
+        background-size: cover;
+    }
+    .block-two .photography {
+        background-image: url('images/desktop/image-photography.jpg');
+        background-size: cover;
+    } 
 }
